# api/openapi/mujeeb24-dashboard-v1.generated.yaml
@@ -914,12 +914,16 @@ components:
           type: string
         item_type:
           type: string
+        long_description:
+          type: string
         name:
           type: string
         pricing_mode:
           type: string
         requires_confirmation:
           type: boolean
+        short_description:
+          type: string
       required:
         - item_type
         - name
